# git-explain

./: README.md  pyproject.toml  release.md  requirements.txt
.github/workflows/: codeql.yml  pypi-publish.yml
git_explain/: __main__.py  cli.py  commit_infer.py  gemini.py  git.py  heuristics.py  path_topics.py  run.py
tests/: test_cli_utils.py  test_gemini.py  test_heuristics.py  test_run_apply.py
